# codeStudy

./: README.md
SendPictureByEmail/: Makefile  email.sln  email.vcproj  emaillib.c  emaillib.h  encb64.c  encb64.h  home_monitor  main.c  备注说明.txt
TinyXml/: TinyXml.sln
TinyXml/TinyXml/: TinyXml.vcproj
TinyXml/TinyXml/conf/: demo.xml  example.xml  new.xml  school-write.xml  school.xml
TinyXml/TinyXml/include/: testObjectClass.h
TinyXml/TinyXml/src/: main.cpp
TinyXml/libIconv/: ReadMe.txt  libIconv.vcproj
android_hardware_ril-cm-10.2/: android_hardware_ril-cm-10.2.sln  android_hardware_ril-cm-10.2.vcproj
android_hardware_ril-cm-10.2/Debug/: BuildLog.htm
android_hardware_ril-cm-10.2/include/telephony/: ril.h
android_hardware_ril-cm-10.2/libril/: ril.cpp  ril_event.cpp  ril_event.h
android_hardware_ril-cm-10.2/reference-ril/: atchannel.c  reference-ril.c
android_hardware_ril-cm-10.2/rild/: rild.c
c++_call_c/: Add.c  Makefile  TestAdd.cpp  c++_call_c
c_call_c++/: Add.cpp  Add.h  Makefile  TestAdd.c  c_call_c++
event_loop_demo/: Log.h  Makefile  event_loop_demo  main.cpp  ril.cpp  ril_event.cpp  ril_event.h  tags
fec/: Makefile  fec.c
linuxdriver/FPGA_IRQ_driver_ARM/: Makefile  fpga_irq_drv.c
linuxdriver/FPGA_IRQ_driver_ARM/test/: Makefile  fpga_irq_test  (+1 more)
linuxdriver/helloworld/: Makefile  hello.c
linuxdriver/testSpi/: Makefile  scp.sh  spidev_test.c
linuxdriver/testSpi/spidev-lib/: CMakeLists.txt
linuxdriver/testSpi/spidev-lib/sample/: Comm_type.h  readme.txt  spidev-testc.c  trk.h
linuxdriver/testSpi/spidev-lib/src/: spidev_lib.c
(+10 files in other folders)
